[gd_scene load_steps=3 format=3 uid="uid://dadwvynkvamgb"]

[ext_resource type="Script" path="res://Scripts/Prototype_generator.gd" id="1_fv80p"]
[ext_resource type="Script" path="res://Scripts/Asset_Lable.gd" id="2_jkx1n"]

[node name="PrototypeGenerator" type="Control" node_paths=PackedStringArray("GeneratorButton", "timer")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fv80p")
GeneratorButton = NodePath("AutoGen")
timer = NodePath("Timer")

[node name="AutoGen" type="Button" parent="."]
custom_minimum_size = Vector2(320, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -40.0
offset_right = 160.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
text = "Start AutoGeneration"

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(0, 80)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_type_variation = &"HeaderLarge"
text = "Assets : 0"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_jkx1n")

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="AutoGen" to="." method="_on_auto_gen_pressed"]
[connection signal="pressed" from="AutoGen" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
